# mini-minipic

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: ci.yaml
doc/: code_structure.md  compilation.md  diags.md  python_tools.md  setups.md  timers.md  validation.md
lib/: minipic_ci.py  minipic_diag.py
libminipic/: ci.py  diag.py  run.py  validate.py
libminipic/validation/: antenna.py  antenna_heavy.py  b_cst.py  beam.py  beam_heavy.py  default.py  e_cst.py  thermal.py  thermal_heavy.py
scripts/: change_include.py  plot_energy_balance.py  plot_field.py  plot_particle_binning.py  plot_particle_cloud.py  plot_profiler.py  print_all_fields.py  print_momentum_intime.py  print_particle_intime.py  print_particles.py  verif_Bfield_cst.py  verif_EB_cst.py  verif_Efield_cst.py  verif_kinetic_energy.py
slurm/: README.md  launch_adastra_mi250.slurm  launch_adastra_mi300.slurm  launch_jean_zay_a100.slurm  launch_jean_zay_h100.slurm  launch_jean_zay_v100.slurm  launch_ruche_a100.slurm  launch_ruche_cpu.slurm  launch_ruche_v100.slurm
src/: main.cpp
src/common/: Diagnostics.hpp  Diagnotics.hpp  ElectroMagn.hpp  Field.hpp  Headers.hpp  Managers.hpp  Operators.hpp  Params.cpp  Params.hpp  Particles.hpp  Patch.hpp  Setup.hpp  SubDomain.hpp  Timers.hpp  Tools.hpp  Vector.hpp
src/exercise/: Managers.cpp  Operators.cpp  Operators.hpp  SubDomain.hpp
src/kokkos/: Managers.cpp  Operators.cpp  Operators.hpp  SubDomain.hpp
src/setups/: Bcst.hpp  antenna.cpp  antenna.hpp  antenna_heavy.cpp  b_cst.cpp  beam.cpp  beam.hpp  beam_heavy.cpp  default_gpu.hpp  e_cst.cpp  thermal.cpp
tests/: launch_adastra_mi250.slurm  launch_adastra_mi300.slurm  launch_jean_zay_a100.slurm  launch_jean_zay_h100.slurm  launch_jean_zay_v100.slurm  launch_ruche_a100.slurm  launch_ruche_cpu.slurm  launch_ruche_v100.slurm  run.py
validation/: Bcst.py  Ecst.py  antenna.py  beam.py  beam_gpu.py  default.py  default_gpu.py  thermal.py
